// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<trigger> demo: > render [align-point] correctly 1`] = `
<div data-v-15638171="" class="demo-point-trigger">
  <div data-v-15638171="">Click Me</div>
</div>
`;

exports[`<trigger> demo: > render [arrow] correctly 1`] = `
<div data-v-b57864a2="" class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button data-v-b57864a2="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Click Me
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button data-v-b57864a2="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Click Me (Arrow)
    </button>
    <!---->
  </div>
</div>
`;

exports[`<trigger> demo: > render [basic] correctly 1`] = `
<div data-v-d605585b="" class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><span data-v-d605585b="">Hover Me</span>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button data-v-d605585b="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Click Me
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><span data-v-d605585b="" class="sd-input-wrapper"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="Focus on me" value=""><!----><!----></span>
    <!---->
  </div>
</div>
`;

exports[`<trigger> demo: > render [nest] correctly 1`] = `
<button data-v-ff68f661="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Click Me
</button>
`;

exports[`<trigger> demo: > render [scroll] correctly 1`] = `
<div data-v-69a843a0="" class="sd:h-25 sd:overflow-y-scroll">
  <div data-v-69a843a0="" class="sd:h-50"><button data-v-69a843a0="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:mt-20" type="button">
      <!--v-if-->Click Me
    </button>
    <!---->
  </div>
</div>
`;

exports[`<trigger> demo: > render [translate] correctly 1`] = `
<div data-v-9ea81b89="" class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button data-v-9ea81b89="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->BOTTOM
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button data-v-9ea81b89="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->BOTTOM OFFSET[100, 20]
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button data-v-9ea81b89="" class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->BOTTOM OFFSET[-100, 20]
    </button>
    <!---->
  </div>
</div>
`;

exports[`<trigger> demo: > render [triggers] correctly 1`] = `<span data-v-90bdd920="" class="sd-input-wrapper"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="Click/Hover/Focus on me" value=""><!----><!----></span>`;
